# delegate-trait

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: lib.rs
impl/src/common/: ident_map.rs  mod.rs
impl/src/common/visitors/: mod.rs  traits.rs
impl/src/delegate/: input.rs  mod.rs
impl/src/implem/: attributes.rs  delegated_trait.rs  input.rs  merges.rs  mod.rs  source.rs  visitor.rs
src/: config.rs  context.rs  dynamic_rename.rs  generics.rs  input.rs  lib.rs  prefixer.rs  trait_impl.rs  trait_path.rs
src/builds/: delegate.rs  delegate_impl.rs  mod.rs
src/modifier/: generic_rename.rs  generics_rename.rs  lookup.rs  mod.rs  rename_path_root.rs
