[package]
name = "delegate-trait"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/makcandrov/delegate-trait"
homepage = "https://github.com/makcandrov/delegate-trait"
documentation = "https://docs.rs/delegate-trait"
description = "Auto generate Rust procedural macro to delegate traits implementations."
license = "MIT OR Apache-2.0"
keywords = ["delegate", "trait"]

[dependencies]
delegate-trait-impl.path = "impl"

delegate = "0.13"
proc-macro2 = "1"
quote = "1"
syn = "2"

[workspace]
members = ["impl"]

[features]
local-imports = ["delegate-trait-impl/local-imports"]
